--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
             </ul>
         </div>
     </nav>
- <!---END OF NAVBAR--->   
+ <!---END OF NAVBAR--->  
+ 
+ <header>
+    <div class="container header_container">
+      <div class="header_left">
+        <h1>Sewa & Rental Mobil Terbaik di Kawasan (Lokasimu)</h1>
+        <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam
+        </p>
+        <a href="courses.html" class="btn btn-primary">Mulai Sewa Mobil</a>
+      </div> 
+      <div class="header_right">
+        <div class="header_right-image">
+            <img src="cc">
+        </div>
+    </div> 
+    </div>
+ </header>
+
+
+
+
 </body>
 </html>
